syntax = "proto3";
package spacemesh.v1;
option go_package = "github.com/spacemeshos/api/release/go/spacemesh/v1";

import "activation_types.proto";

// Exposes services to query activation transactions
service ActivationService {
    // Get a single activation transaction
    rpc Get(GetRequest) returns (GetResponse);
}
